# citrusinvest

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  llms.txt  renovate.json
.github/workflows/: ci.yml  docs.yml  lemon-lsp-release.yml  lemon-release.yml  publish-wasm-npm.yml  release-plz.yml  release-python.yml  vscode-publish.yml
crates/lemon/: CHANGELOG.md  Cargo.toml  README.md
crates/lemon-cli/: Cargo.toml  README.md
crates/lemon-cli/src/: frontmatter.rs  main.rs  sync.rs  universe.rs
crates/lemon-lang/: CHANGELOG.md  Cargo.toml  README.md
crates/lemon-lang/examples/: gen-schema.rs
crates/lemon-lang/src/: envelope.rs  lib.rs  main.rs  services.rs  spec.rs
crates/lemon-lang/src/dsl/: lex.rs  mod.rs  ops.rs  parse.rs
crates/lemon-lsp/: Cargo.toml  README.md
crates/lemon-lsp/src/: main.rs
crates/lemon-wasm/: Cargo.toml  README.md
crates/lemon-wasm/src/: lib.rs
crates/lemon/examples/: gen-schema.rs
crates/lemon/src/: lib.rs  main.rs  services.rs  spec.rs
crates/lemon/src/dsl/: lex.rs  lint.rs  mod.rs  ops.rs  parse.rs  print.rs
crates/pomelo-alpha-vantage/: CHANGELOG.md  Cargo.toml  README.md
crates/pomelo-alpha-vantage/src/: config.rs  delisted.rs  factors.rs  fundamentals.rs  http.rs  industry.rs  lib.rs  price.rs  screener.rs  snapshot.rs  symbol.rs  sync.rs  util.rs
crates/pomelo-audit/: CHANGELOG.md  Cargo.toml  README.md
crates/pomelo-audit/src/: checks.rs  lib.rs  report.rs  scan.rs
crates/pomelo-data/: CHANGELOG.md  Cargo.toml  README.md
crates/pomelo-data/src/: date.rs  error.rs  factors.rs  format.rs  fundamentals.rs  industry.rs  lib.rs  loader.rs  parallel.rs  source.rs
crates/pomelo-eodhd/: CHANGELOG.md  Cargo.toml  README.md
crates/pomelo-eodhd/src/: config.rs  delisted.rs  factors.rs  fundamentals.rs  http.rs  index.rs  industry.rs  lib.rs  price.rs  screener.rs  snapshot.rs  symbol.rs  sync.rs  util.rs
crates/pomelo-finnhub/: CHANGELOG.md  Cargo.toml  README.md
crates/pomelo-finnhub/src/: config.rs  factors.rs  fundamentals.rs  http.rs  index.rs  industry.rs  lib.rs  price.rs  screener.rs  snapshot.rs  symbol.rs  sync.rs  util.rs
crates/pomelo-fmp/: CHANGELOG.md  Cargo.toml  README.md
crates/pomelo-fmp/src/: config.rs  delisted.rs  factors.rs  fundamentals.rs  http.rs  index.rs  industry.rs  lib.rs  price.rs  snapshot.rs  sync.rs  tests.rs
crates/pomelo-http/: CHANGELOG.md  Cargo.toml  README.md
crates/pomelo-http/src/: lib.rs
crates/pomelo-s3/: CHANGELOG.md  Cargo.toml  README.md
crates/pomelo-s3/src/: lib.rs
crates/yuzu-cli/: Cargo.toml  README.md
crates/yuzu-cli/src/: data_audit.rs  fmp.rs  lib.rs  main.rs
crates/yuzu-cli/src/commands/: audit.rs  backtest.rs  mod.rs  research.rs
crates/yuzu-cli/src/commands/sync/: alpha_vantage.rs  eodhd.rs  finnhub.rs  fmp.rs  mod.rs
crates/yuzu-cli/src/fmp/: config.rs  factors.rs  fundamentals.rs  http.rs  index.rs  industry.rs  mod.rs  price.rs  snapshot.rs  sync.rs  tests.rs  universe.rs  util.rs
crates/yuzu-cli/tests/: cli.rs  data_audit.rs  eodhd_sync.rs  fmp_sync.rs
crates/yuzu-core/: CHANGELOG.md  Cargo.toml  README.md
crates/yuzu-core/examples/: basic_backtest.rs
crates/yuzu-core/src/: align.rs  backtest.rs  bootstrap.rs  error.rs  eval.rs  lib.rs  metrics.rs  panel.rs  report.rs  research.rs
crates/yuzu-core/src/backtest/: config.rs  cost.rs  delist.rs  mod.rs  nav.rs  stops.rs  tests.rs  trade.rs  weights.rs
crates/yuzu-core/src/ops/: arith.rs  cross_section.rs  indicators.rs  linalg.rs  mod.rs  neutralize.rs  rebalance.rs  rotation.rs  signals.rs  stat.rs  ta.rs
crates/yuzu-core/tests/: golden_backtest.rs  golden_harness.rs  golden_metrics.rs  golden_neutralize.rs  golden_ops.rs  strategy_backtest_e2e.rs  strategy_e2e.rs
crates/yuzu-core/tests/golden/: average_2.json  backtest_fee.json  backtest_nofee.json  bollinger_lower_2.json  bollinger_mid_2.json  bollinger_upper_2.json  cap_industry.json  donchian_high_3.json  donchian_mid_3.json  exit_when.json  fall_1.json  groupby_category.json  hold_until_stops.json  hold_until_trail.json  industry_rank.json  is_entry.json  is_exit.json  is_largest_1.json  is_smallest_2.json  macd_2_3.json  macd_hist_2_3_2.json  macd_signal_2_3_2.json  metrics_basic.json  neutralize.json  neutralize_industry.json  quantile_50.json  rebalance_ME.json  rebalance_QE.json  rebalance_W.json  rolling_min_3.json  strategy_e2e.json  sustain_2.json  vol_target_2.json
crates/yuzu-data/: CHANGELOG.md  Cargo.toml  README.md
crates/yuzu-data/src/: combined.rs  csv_io.rs  fundamentals.rs  lib.rs  loader.rs  parallel.rs  parquet_io.rs  source.rs
crates/yuzu-py/: Cargo.toml  README.md  pyproject.toml
crates/yuzu-py/src/: lib.rs
crates/yuzu-py/tests/: test_yuzu.py
crates/yuzu-research/: CHANGELOG.md  Cargo.toml  README.md
crates/yuzu-research/src/: ctx.rs  grid.rs  lib.rs  lookahead.rs  research.rs  sweep.rs  walkforward.rs
crates/yuzu-server/: Cargo.toml  README.md
crates/yuzu-server/examples/: backtest-request.json
crates/yuzu-server/src/: cache.rs  lib.rs  main.rs
crates/yuzu-source-s3/: CHANGELOG.md  Cargo.toml  README.md
crates/yuzu-source-s3/src/: lib.rs
crates/yuzu-wasm/: Cargo.toml  README.md
crates/yuzu-wasm/src/: lib.rs
docs/: alpha-vantage-data-source.md  backtest-engine.md  data-layout.md  data-sources.md  eodhd-data-source.md  finnhub-data-source.md  fmp-data-source.md  lemon-prompt.md  lemon.md  research.md  strategy-envelope.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  cliff.toml  esbuild.js  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts  server.ts
schema/: lemon-spec.schema.json  op-catalog.json  strategy-envelope.schema.json
scripts/: build-lemon-wasm.sh  build-wasm.sh  build-yuzu-wasm.sh  coverage.sh  install.sh
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site/public/: CNAME
site/public/data/: sample.json
site/scripts/: fetch-sample-data.mjs  gen-og.mjs  gen-sample-data.mjs  import-reference-docs.mjs  sync-public-assets.mjs
(+34 files in other folders)
