[workspace]
resolver = "2"
members = ["crates/yuzu-core", "crates/yuzu-research", "crates/pomelo-data", "crates/pomelo-audit", "crates/yuzu-wasm", "crates/yuzu-cli", "crates/pomelo-fmp", "crates/pomelo-s3", "crates/yuzu-server", "crates/lemon-lang", "crates/lemon-wasm", "crates/lemon-lsp"]
# yuzu-py builds via maturin with its own lockfile (PyO3 toolchain), outside
# the workspace so cargo test/coverage CI never needs a Python toolchain.
exclude = ["crates/yuzu-py"]

[workspace.package]
version = "0.8.1"
edition = "2021"
rust-version = "1.86"
license = "MIT"
repository = "https://github.com/citrusquant/citrusquant"
readme = "README.md"

[workspace.dependencies]
ndarray = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
flate2 = "1.0.35"
clap = { version = "4.0.32", features = ["derive"] }
rayon = "1.0.3"
wasm-bindgen = "0.2.126"
