[package]
name = "lemon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true
description = "The lemon command-line tool: format, lint, and check strategies, and run them as native backtests."
publish = false

[[bin]]
name = "lemon"
path = "src/main.rs"

[dependencies]
lemon = { package = "lemon-lang", path = "../lemon-lang", version = "0.11.0" }
serde_json = { workspace = true }
# `lemon run` wiring: the engine config lives in yuzu-core, the load-panels +
# run-backtest orchestration in yuzu-research. The language crate (lemon-lang)
# must NOT depend on these — yuzu-core depends on it, so the runner lives here.
yuzu-core = { path = "../yuzu-core", version = "0.11.0" }
yuzu-research = { path = "../yuzu-research", version = "0.11.0" }

[dev-dependencies]
# Test fixtures: write gzip CSV price files into a temp data-layout tree.
pomelo-data = { path = "../pomelo-data", version = "0.11.0" }
