[package]
name = "lemon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true
description = "The lemon command-line tool: format, lint, and check strategies, and run them as native backtests."
publish = false

[[bin]]
name = "lemon"
path = "src/main.rs"

[dependencies]
lemon = { package = "lemon-lang", path = "../lemon-lang", version = "0.12.1" }
serde = { workspace = true }
serde_json = { workspace = true }
# `lemon run` wiring: the engine config lives in yuzu-core, the load-panels +
# run-backtest orchestration in yuzu-research. The language crate (lemon-lang)
# must NOT depend on these — yuzu-core depends on it, so the runner lives here.
yuzu-core = { path = "../yuzu-core", version = "0.12.1" }
yuzu-research = { path = "../yuzu-research", version = "0.12.1" }
# Gap checks for `--sync` (which symbols have price files, which series are
# fundamentals) and test fixtures.
pomelo-data = { path = "../pomelo-data", version = "0.12.1" }
# `lemon run --sync` (#246). default-features=false keeps the pure sync core
# (tests inject a mock HttpClient); the `fmp-sync` feature turns on the real
# ureq TLS client, mirroring yuzu-cli's setup.
pomelo-fmp = { path = "../pomelo-fmp", version = "0.12.1", default-features = false }

[features]
default = ["fmp-sync"]
# `lemon run --sync` against FMP with the user's own key over HTTPS. Pulls the
# ureq TLS stack (via pomelo-fmp); disable with --no-default-features for an
# offline-only build.
fmp-sync = ["pomelo-fmp/fmp-sync"]
