[package]
name = "lemon-lang"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true
description = "The lemon strategy DSL: parser, AST, and formatter."
keywords = ["dsl", "trading", "strategy", "backtesting", "parser"]
categories = ["finance", "parser-implementations"]

[lib]
name = "lemon"

[[bin]]
name = "lemon"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
