[package]
name = "lemon-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "WASM boundary for the lemon DSL: parse .lemon source to and from the JSON Expr tree."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lemon = { package = "lemon-lang", path = "../lemon", version = "0.2.0" }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
