[package]
name = "pomelo-alpha-vantage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true
description = "Bring-your-own-key Alpha Vantage data sync for the yuzu backtest engine. Writes a data-layout tree to any ObjectSink (local disk or S3/R2). No Alpha Vantage data redistributed."
keywords = ["alpha-vantage", "backtesting", "finance", "market-data"]
categories = ["finance"]

[dependencies]
yuzu-core = { path = "../yuzu-core", version = "0.12.2" }
pomelo-data = { path = "../pomelo-data", version = "0.12.2" }
# Shared HTTP client / retry Fetcher / WriteMode (no vendor logic).
pomelo-http = { path = "../pomelo-http", version = "0.12.2", default-features = false }
serde_json = { workspace = true }
flate2 = { workspace = true }

[features]
default = ["alpha-vantage-sync"]
# The real ureq-backed `UreqClient` (via pomelo-http). Disable for a
# networking-free dependent that supplies its own `HttpClient`.
alpha-vantage-sync = ["pomelo-http/ureq"]
