[package]
name = "pomelo-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Read-only data-quality audit of a pomelo data-layout tree: coverage, calendar gaps, adjustment sanity, survivorship, NaN density, filing-date lag, index membership."
keywords = ["backtesting", "finance", "market-data", "data-quality"]
categories = ["finance"]

[dependencies]
pomelo-data = { path = "../pomelo-data", version = "0.6.0" }
yuzu-core = { path = "../yuzu-core", version = "0.6.0" }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
# Proves run_data_audit is genuinely storage-agnostic (#149): one test drives it
# against a stub S3 endpoint instead of LocalSource.
pomelo-s3 = { path = "../pomelo-s3", version = "0.6.0" }
