[package]
name = "pomelo-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Read-only data-quality audit of a pomelo data-layout tree: coverage, calendar gaps, adjustment sanity, survivorship, NaN density, filing-date lag, index membership."
keywords = ["backtesting", "finance", "market-data", "data-quality"]
categories = ["finance"]

[dependencies]
pomelo-data = { path = "../pomelo-data", version = "0.9.0" }
yuzu-core = { path = "../yuzu-core", version = "0.9.0" }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
# Proves run_data_audit is genuinely storage-agnostic (#149): one test drives it
# against a stub S3 endpoint instead of LocalSource.
#
# Path-only (no `version`) on purpose: cargo strips version-less dev-dependencies
# from the published manifest, so crates.io never sees pomelo-audit -> pomelo-s3.
# With a version here, release-plz (which orders publishes by normal deps only,
# ignoring dev-deps) publishes pomelo-audit before pomelo-s3, and crates.io then
# rejects it because the required pomelo-s3 version isn't on the index yet. Do
# NOT add a `version` back — it re-creates that release-plz publish deadlock.
pomelo-s3 = { path = "../pomelo-s3" }
