[package]
name = "pomelo-finnhub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true
description = "Bring-your-own-key Finnhub data sync for the yuzu backtest engine. Writes a data-layout tree to any ObjectSink (local disk or S3/R2). No Finnhub data redistributed."
keywords = ["finnhub", "backtesting", "finance", "market-data"]
categories = ["finance"]

[dependencies]
yuzu-core = { path = "../yuzu-core", version = "0.11.0" }
pomelo-data = { path = "../pomelo-data", version = "0.11.0" }
# Shared HTTP client / retry Fetcher / WriteMode (no vendor logic).
pomelo-http = { path = "../pomelo-http", version = "0.11.0", default-features = false }
serde_json = { workspace = true }
flate2 = { workspace = true }

[features]
default = ["finnhub-sync"]
# The real ureq-backed `UreqClient` (via pomelo-http). Disable for a
# networking-free dependent that supplies its own `HttpClient`.
finnhub-sync = ["pomelo-http/ureq"]
