[package]
name = "pomelo-s3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true
description = "S3-compatible ObjectSource for pomelo-data, reading objects over SigV4-presigned HTTPS GETs."
keywords = ["s3", "backtesting", "finance", "market-data"]
categories = ["finance"]

[dependencies]
rusty-s3 = "0.10.0"
# default-features=false drops the `gzip` feature: ureq must NOT transparently
# decompress responses. Objects are stored gzip (`.csv.gz`) and the loaders
# gunzip them — if some are tagged `Content-Encoding: gzip`, auto-decompress
# would hand the loader plain bytes and break `GzDecoder`. `rustls` keeps TLS +
# webpki roots for the HTTPS GETs.
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
pomelo-data = { path = "../pomelo-data", version = "0.11.0" }

[dev-dependencies]
flate2.workspace = true
