[package]
name = "yuzu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Native batch backtest runner CLI over a locally-synced price mirror."
publish = false

[lib]
name = "yuzu_cli"
path = "src/lib.rs"

[[bin]]
name = "yuzu-cli"
path = "src/main.rs"

[dependencies]
yuzu-core = { path = "../yuzu-core", version = "0.4.0" }
yuzu-data = { path = "../yuzu-data", version = "0.4.0" }
clap = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
# BYO-key FMP data sync (issue #52). Direct HTTP, no third-party FMP SDK.
# default-features=false drops `gzip` so ureq never transparently decompresses a
# response (same reasoning as yuzu-source-s3). Optional + behind the default-on
# `fmp-sync` feature so a networking-free build of the engine tooling can drop it
# entirely — FMP never touches yuzu-core / yuzu-data / WASM.
ureq = { version = "3.3.0", default-features = false, features = ["rustls"], optional = true }

[features]
default = ["fmp-sync"]
# `yuzu-cli fmp-sync`: fetch prices/fundamentals from FMP with the user's own
# key over HTTPS. Pulls the ureq TLS stack; disable with --no-default-features
# for an offline-only CLI build.
fmp-sync = ["dep:ureq"]
