[package]
name = "yuzu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Native batch backtest runner CLI over a locally-synced price mirror."
publish = false

[lib]
name = "yuzu_cli"
path = "src/lib.rs"

[[bin]]
name = "yuzu-cli"
path = "src/main.rs"

[dependencies]
yuzu-core = { path = "../yuzu-core", version = "0.6.0" }
pomelo-data = { path = "../pomelo-data", version = "0.6.0" }
# FMP data sync + snapshot-factor formulas live in their own crate so a backend
# service can link the same logic (and write to S3/R2 via the ObjectSink core).
# default-features=false keeps the pure parts (index membership, factor math)
# available without a TLS stack; the CLI's `fmp-sync` feature turns on the real
# ureq client via pomelo-fmp/fmp-sync.
pomelo-fmp = { path = "../pomelo-fmp", version = "0.6.0", default-features = false }
clap = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }

[features]
default = ["fmp-sync"]
# `yuzu-cli fmp-sync`: fetch prices/fundamentals from FMP with the user's own
# key over HTTPS. Pulls the ureq TLS stack (via pomelo-fmp); disable with
# --no-default-features for an offline-only CLI build.
fmp-sync = ["pomelo-fmp/fmp-sync"]
