[package]
name = "yuzu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Native batch backtest runner CLI over a locally-synced price mirror."
publish = false

[lib]
name = "yuzu_cli"
path = "src/lib.rs"

[[bin]]
name = "yuzu-cli"
path = "src/main.rs"

[dependencies]
yuzu-core = { path = "../yuzu-core", version = "0.11.0" }
pomelo-data = { path = "../pomelo-data", version = "0.11.0" }
# Multi-run research orchestration (sweep/grid/walk-forward/lookahead), re-exported
# so the run_* handlers live in the library layer, not the binary.
yuzu-research = { path = "../yuzu-research", version = "0.11.0" }
# Read-only data-quality audit (yuzu-cli data-audit) — the logic lives in the
# data-engineering layer; the CLI is a thin caller.
pomelo-audit = { path = "../pomelo-audit", version = "0.11.0" }
# FMP data sync + snapshot-factor formulas live in their own crate so a backend
# service can link the same logic (and write to S3/R2 via the ObjectSink core).
# default-features=false keeps the pure parts (index membership, factor math)
# available without a TLS stack; the CLI's `fmp-sync` feature turns on the real
# ureq client via pomelo-fmp/fmp-sync.
pomelo-fmp = { path = "../pomelo-fmp", version = "0.11.0", default-features = false }
# EODHD second official sync path (epic #192). default-features=false keeps the
# pure symbol helpers without TLS; `eodhd-sync` turns on ureq.
pomelo-eodhd = { path = "../pomelo-eodhd", version = "0.11.0", default-features = false }
# Alpha Vantage path (epic #209). default-features=false keeps pure helpers
# without TLS; `alpha-vantage-sync` turns on ureq.
pomelo-alpha-vantage = { path = "../pomelo-alpha-vantage", version = "0.11.0", default-features = false }
# Finnhub path (epic #210). default-features=false keeps pure helpers without TLS.
pomelo-finnhub = { path = "../pomelo-finnhub", version = "0.11.0", default-features = false }
# S3/R2 output for vendor-sync `--out s3://…` (optional; enabled by vendor-sync features).
pomelo-s3 = { path = "../pomelo-s3", version = "0.11.0", optional = true }
clap = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }

[features]
default = ["fmp-sync", "eodhd-sync", "alpha-vantage-sync", "finnhub-sync"]
# `yuzu-cli fmp-sync`: fetch prices/fundamentals from FMP with the user's own
# key over HTTPS. Pulls the ureq TLS stack (via pomelo-fmp); disable with
# --no-default-features for an offline-only CLI build.
fmp-sync = ["pomelo-fmp/fmp-sync", "dep:pomelo-s3"]
# `yuzu-cli eodhd-sync`: second official vendor path (pomelo-eodhd).
eodhd-sync = ["pomelo-eodhd/eodhd-sync", "dep:pomelo-s3"]
# `yuzu-cli av-sync`: Alpha Vantage path (pomelo-alpha-vantage; epic #209).
alpha-vantage-sync = ["pomelo-alpha-vantage/alpha-vantage-sync", "dep:pomelo-s3"]
# `yuzu-cli finnhub-sync`: Finnhub path (pomelo-finnhub; epic #210).
finnhub-sync = ["pomelo-finnhub/finnhub-sync", "dep:pomelo-s3"]
