[package]
name = "yuzu-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Pure, I/O-free backtest engine core for US equity strategies."
keywords = ["backtesting", "trading", "finance", "quant", "stocks"]
categories = ["finance", "mathematics"]

[dependencies]
ndarray.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
lemon = { package = "lemon-lang", path = "../lemon-lang", version = "0.11.0" }

[dev-dependencies]
proptest = { workspace = true }
