[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "yuzu-backtest"
dynamic = ["version"]
description = "Python bindings for the yuzu backtest engine and the lemon strategy DSL."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Repository = "https://github.com/citrusquant/citrusquant"

[tool.maturin]
module-name = "yuzu"
