[package]
name = "yuzu-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
name = "yuzu_server"
path = "src/lib.rs"

[[bin]]
name = "yuzu-server"
path = "src/main.rs"

[dependencies]
yuzu-core = { path = "../yuzu-core" }
yuzu-data = { path = "../yuzu-data" }
yuzu-source-s3 = { path = "../yuzu-source-s3" }
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = "0.12"

[dev-dependencies]
ndarray.workspace = true
