[package]
name = "yuzu-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "HTTP backtest server that reads only the series a spec references and runs yuzu-core."
publish = false

[lib]
name = "yuzu_server"
path = "src/lib.rs"

[[bin]]
name = "yuzu-server"
path = "src/main.rs"

[dependencies]
yuzu-core = { path = "../yuzu-core", version = "0.2.0" }
yuzu-data = { path = "../yuzu-data", version = "0.2.0" }
yuzu-source-s3 = { path = "../yuzu-source-s3", version = "0.2.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = "0.12"

[dev-dependencies]
ndarray.workspace = true
