[package]
name = "yuzu-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "WASM JSON boundary over yuzu-core's backtest for in-browser execution."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yuzu-core = { path = "../yuzu-core", version = "0.11.0" }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
